set up h1 and navbar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <title>Fastenate</title>
 </head>
 <body>
+  <h1>FASTENATE</h1>
+  <nav class="menu">
+  <ul>
+    <li><a href="#">RANDOM</a></li>
+    <li><a href="#">MY BOARDS</a></li>
+    <li><a href="#">GET THE APP</a></li>
+  </ul>
+</nav>
+
 <script src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
