set up basci html struc

--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
   <title>Fastenate</title>
 </head>
 <body>
-  <h1>FASTENATE</h1>
+
+  <header>
+    <img src="/assets/logo.svg" alt="logo">
+  </header>
+
   <nav class="menu">
-  <ul>
-    <li><a href="#">RANDOM</a></li>
-    <li><a href="#">MY BOARDS</a></li>
-    <li><a href="#">GET THE APP</a></li>
-  </ul>
-</nav>
+    <ul>
+      <li><a href="#">RANDOM</a></li>
+      <li><a href="#">MY BOARDS</a></li>
+      <li><a href="#">GET THE APP</a></li>
+    </ul>
+  </nav>
+
+  <main>main body content</main>
+  <footer>footer: facebook and instagram logos here</footer>
 
 <script src="js/app.js" charset="utf-8"></script>
 </body>
