set up xhr request; for loop correctly appends html elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
     </ul>
   </nav>
 
-  <main>main body content</main>
+  <main id="main">main body content
+
+    <!-- <div class="board">
+        <div class="img">
+          <img src="" alt="thumbnail">
+        </div>
+        <div class="title"></div>
+        <div class="subtitle">
+          <div class="username"></div>
+          <div class="datePosted"></div>
+          <div class="numViews"></div>
+        </div>
+        <div class="descrip"></div>
+    </div> -->
+
+
+  </main>
   <footer>footer: facebook and instagram logos here</footer>
 
 <script src="js/app.js" charset="utf-8"></script>
