--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
   <header>
-    <img src="/assets/logo.svg" alt="logo">
+    <div id="header">
+      <img src="/assets/logo.svg" alt="logo">
+    </div>
   </header>
 
   <nav class="menu">
@@ -20,7 +22,7 @@
     </ul>
   </nav>
 
-  <main id="main">main body content
+  <main id="main">
 
     <!-- <div class="board">
         <div class="img">
@@ -29,7 +31,7 @@
         <div class="title"></div>
         <div class="subtitle">
           <div class="username"></div>
-          <div class="datePosted"></div>
+          <div class="date"></div>
           <div class="numViews"></div>
         </div>
         <div class="descrip"></div>
